build_log_25.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/main.cpp.o
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:17,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/main.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/ui_layer.h:62:10: error: ‘void ui::UiLayer::drawBookmarks(ui::UiFrameContext&)’ cannot be overloaded with ‘void ui::UiLayer::drawBookmarks(ui::UiFrameContext&)’
   62 |     void drawBookmarks(UiFrameContext& ctx);
      |          ^~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/ui_layer.h:61:10: note: previous declaration ‘void ui::UiLayer::drawBookmarks(ui::UiFrameContext&)’
   61 |     void drawBookmarks(UiFrameContext& ctx);
      |          ^~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:79: CMakeFiles/sisterapp.dir/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
